[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for TDEE Tracker"
authors = ["peterwzhang"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"

[tool.poetry.scripts]
start = "app.main:run_app"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
